2002-12-12  Tim Perdue <tim@gforge.org>

	* Added skills/profile system patch submitted by John Maguire

2002-12-09  Tim Perdue <tim@gforge.org>

	* Complete forum rewrite using OO style and coding guidlines.
	Same form and design as Tracker system.

2002-12-07  Tim Perdue <tim@gforge.org>

	* Moved html_build_list_table_top() into Layout.class, and 
	created listTableBottom(), so they can be easily themed.

2002-12-06  Tim Perdue <tim@gforge.org>

	* Jabber Support working. Tracker updates and Forum Posts 
	are now set to use the jabber system. Much more integration 
	needs to be done.

2002-11-28  Tim Perdue <tim@gforge.org>

	* Cleaned up and simplied File Release System. Still needs 
	serious OO rewrite, however it is no longer dependent on 
	setuid "fileforge" and "tempfileforge".

2002-11-25  Tim Perdue <tim@gforge.org>

	* Removed hacky "theming" system and rewrote Layout.class 
	with new sitewide theme. New theming system can be based on
	extending Layout.class as they did before. Renamed several 
	function calls in Layout.class.

	* Foundries and all related code removed

2001-07-13  Paul Sokolovsky  <pfalcon@sourceforge.net>

	* www/include/logger.php: We should allow to access groups
	with 'Holding' status.
	* www/search/index.php: Ditto.

2001-07-09  Paul Sokolovsky  <pfalcon@sourceforge.net>

	* common/include/utils.php(util_check_fileupload): New
	function, checks that file is in fact was uploaded by user
	and may be safely used without compromising system.
	* www/docman/new.php, www/project/admin/editimages.php,
	www/project/admin/editreleases.php, www/project/admin/qrs.php,
	www/tracker/include/ArtifactFileHtml.class: Use that function.

2001-07-08  Tim Perdue  <tim@perdue.net>

	* Quick patch of massive gaping security hole where uploaded
	files were not verified before being read in.

2001-07-01  Paul Sokolovsky  <pfalcon@sourceforge.net>

	* TARBALL: Cleaned up somewhat, made leave /tmp/scratch
	in place of manual cleanup.
