@@ -1,0 +1,6 @@
+--
+--      Making docman binary safe
+--
+alter table doc_data add column filename text;
+alter table doc_data add column filetype text;
+
