@@ -12,33 +12,41 @@
   */
 
 /*
-        by Quentin Cregan, SourceForge 06/2000
+		by Quentin Cregan, SourceForge 06/2000
 */
 
 
 require_once('doc_utils.php');
 require_once('pre.php');
 
+$arr=explode('/',$REQUEST_URI);
+$docid=$arr[3];
+
 if ($docid) {
-	$query = "select * "
-		."from doc_data "
-		."where docid = '$docid' "
-		."and stateid = '1'";
+	$query = "select data,doc_group,filetype,filename
+		from doc_data 
+		where docid = '$docid' 
+		and stateid = '1'";
 		// stateid = 1 == active
 	$result = db_query($query);
-	
 	if (db_numrows($result) < 1) {
 		exit_error('Document unavailable','Document is not available.');
 	} else {
 		$row = db_fetch_array($result);
 	}
-	
-	docman_header($row['title'],$row['title'],'docman_display_doc','',group_getname($group_id));
+	$g =& group_get_object($row['doc_group']);
+	if (!$g || !is_object($g)) {
+		exit_nogroup();
+	} elseif ($g->isError()) {
+		exit_error('Error',$g->getErrorMessage());
+	}
 
-	// data in DB stored in htmlspecialchars()-encoded form
-    	print util_unconvert_htmlspecialchars($row['data']);
-	docman_footer($params);
+//	Header ("Content-disposition: filename=$row[filename]");
+//	Header ("Content-type: $row[filetype]");
+	echo base64_decode($row['data']);
 
 } else {
 	exit_error("No document data.","No document to display - invalid or inactive document number.");
 }
+
+?>
