@@ -1,3 +1,9 @@
+2002-12-13  Tim Perdue <tim@gforge.org>
+
+	* Quick changes to doc manager to protect binary safe uploads /
+	downloads. Must run a PHP script to migrate your data from pre6 
+	to pre7. The script is in db/doc_data-migrate.php
+
 2002-12-12  Tim Perdue <tim@gforge.org>
 
 	* Added skills/profile system patch submitted by John Maguire
